tpl/style.css
html, body { margin: 0; height: 100%; }

/**** PANEL / FLEX BOXES ****/

#app {
    height: 100%;
    display: flex;
    flex-flow: row;
}
#panel {
    order: 1;
    flex: 3 30%;
    align-self: stretch;
    overflow: auto;
    max-width: 20em;
    white-space: nowrap;
    background-color: #d3d3d3;
    border-right: 0.2em solid #7e7e7e;
}
#content {
    order: 2;
    flex: 7 70%;
    align-self: stretch;
    overflow: auto;
    background-color: #eee;
    position: relative;
}
#content > h2, #content > form, #content > p { margin-left: 1em; margin-right: 1em; }

/**** ACTIONS LISTS ****/

.toolbar {
    background-color: #bbb;
}
.actions {
    list-style-type: none;
    margin: 0;
    padding: 0;
    height: 24px;
    border-left: 0.2em solid #d3d3d3;
    border-right: 0.2em solid #d3d3d3;
}
.actions li {
    float: right;
    border-left: 0.2em solid #d3d3d3;
    background-color: #bbb;
}
.actions li.secondary { float: left; border-right: 0.2em solid #d3d3d3; border-left: none; }
.actions a {
    display: block;
    height: 16px;
    min-width: 16px;
    padding: 4px;
    text-align: center;
    background-color: #bbb;
    text-decoration: none;
    color: #000;
    font-size: 0.5em;
    line-height: 16px;
    vertical-align: baseline;
}
.actions a.disabled { background-color: #d3d3d3; }
.actions li.active a { background-color: #c8c8c8; }
.actions a:hover { background-color: #d3d3d3; }
.actions img { vertical-align: middle; }

/**** TREE PANEL ****/

#panel h1, #panel h2, #panel h3, #panel h4 { margin: 0; padding: 0.2em 0.5em; }

#panel #root, #panel #root ul { list-style-type: none; padding: 0; margin: 0; }
#panel #root { padding: 0 0.5em; }
#panel #root li { background-repeat: no-repeat; margin: 0.2em 0; padding: 0.1em 0.5em 0.1em 1.4em; background-position: 0.2em 0.2em; }
#panel #root .file { background-image: url('img/document.png'); }
#panel #root .directory { background-image: url('img/folder.png'); }
#panel #root .directory.open { background-image: url('img/folder-open.png'); }
#panel #root .selected { background-color: #eee; border-radius: 0.2em; }


/**** CONTENT ****/

.path {
    font-size: 0.8em;
    font-style: italic;
    margin-bottom: 0.5em;
    padding: 0 0.5em;
    text-align: right;
    clear: both;
    background-color: #d3d3d3;
}

#editor {
    min-height: 1em;
    border-bottom: 1px dotted #bbb;
    margin: 0.5em;
    padding: 0.5em;
    outline: 0;
}
#editor p { text-indent: 1em; }
pre { white-space: pre-wrap; word-wrap: break-word; }

label { display: inline-block; width: 8em; }

.success { color: blue; }
.error { color: red; }

